[CODE]新增定时器及心跳检测

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@ include ../Makefile.config
 
 INCLUDE=$(BASE_INCLUDE) -I. -I.. -I../..
 LIB_PATH=$(BASE_LIB_PATH)
-LIB=$(BASE_LIB) -lprotobuf
+LIB=$(BASE_LIB) -lprotobuf -lboost_system
 USER_LIB=../utils/libutils.a ../protocpp/libprotocpp.a
 
 SRCS=$(wildcard */*.cpp */*.zjx)
