[CODE]新增战斗模拟模块及测试模块

--- a/logic_work/Makefile
+++ b/logic_work/Makefile
@@ -4,9 +4,9 @@ LIB = $(BASE_LIB)
 LIB_PATH = $(BASE_LIB_PATH)
 INCLUDE = $(BASE_INCLUDE) -I. -I..
 
-SRCS = $(wildcard *.cpp)
+SRCS = $(wildcard */*.cpp)
 OBJS = $(SRCS:%.cpp=%.o)
-	DEPS = $(SRCS:%.cpp=%.d)
+DEPS = $(SRCS:%.cpp=%.d)
 
 NAME = logic_work
 TARGET = lib$(NAME).a
@@ -16,16 +16,16 @@ all : $(TARGET)
 -include $(DEPS)
 
 %.o:%.cpp
-	    $(CXX) $(VERSION) $(CXXFLAGS) $(INCLUDE) -c $< -o $@ -MMD -MP
+	$(CXX) $(VERSION) $(CXXFLAGS) $(INCLUDE) -c $< -o $@ -MMD -MP
 
 clean:
-	    rm *.d *.o $(TARGET) -rf
+	rm */*.d */*.o $(TARGET) -rf
 
 distclean:
-	    @echo "$(NAME) nothing to do ~~~~~~"
+	@echo "$(NAME) nothing to do ~~~~~~"
 
 $(TARGET) : $(OBJS)
-	    @rm $(TARGET) -rf
-		    ar -crs $(TARGET) $(OBJS)
+	@rm $(TARGET) -rf
+	ar -crs $(TARGET) $(OBJS)
 
 .PHONY: all clean  distclean
