[CODE]修复关闭流程崩溃bug, 解决部分内存泄漏问题(待测试)

--- a/Makefile.config
+++ b/Makefile.config
@@ -2,10 +2,15 @@ BASE_INCLUDE = -I/usr/local/include -I/usr/integration_server_third/include
 
 BASE_LIB_PATH = -L/usr/lib/x86_64-linux-gnu -L/usr/integration_server_third/lib
 
+ASAN_LIB = -lasan
+
 BASE_LIB = -lpthread
 
 CXX = g++
 
 VERSION = -O0
+
+#内存检测开启
+ASAN = -fsanitize=address
 
 CXXFLAGS = -Wall -std=c++11 -g
