[CODE]修改第三方目录

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,6 +1,8 @@
-BASE_INCLUDE = -I/usr/local/include -I/usr/integration_server_third/include
+BASE_INCLUDE = -I/usr/local/include -I/usr/local/integration_server_third/include
 
-BASE_LIB_PATH = -L/usr/lib/x86_64-linux-gnu -L/usr/integration_server_third/lib
+ZDB_INCLUDE = -I/usr/local/integration_server_third/include/zdb
+
+BASE_LIB_PATH = -L/usr/lib/x86_64-linux-gnu -L/usr/local/integration_server_third/lib
 
 ASAN_LIB = -lasan
 
