[CODE]调整条件编译参数

--- a/Makefile.config
+++ b/Makefile.config
@@ -15,4 +15,8 @@ VERSION = -O0
 #内存检测开启
 ASAN = -fsanitize=address
 
-CXXFLAGS = -Wall -std=c++11 -g
+CXXFLAGS = -Wall -std=c++11 -g -ggdb
+
+CXXDEFINE += -DNETWORK_TASK_TEST \
+		     -DNETWORK_SERVER
+
