--- a/test/Makefile
+++ b/test/Makefile
@@ -17,7 +17,7 @@ all : $(TARGET)
 -include $(DEPS)
 
 %.o : %.cpp
-	$(CXX) $(CXXFLAGS) -Wno-unused-variable $(INCLUDE) $(VERSION) -c $< -o $@ -MMD -MP
+	$(CXX) $(CXXDEFINE) $(CXXFLAGS) -Wno-unused-variable $(INCLUDE) $(VERSION) -c $< -o $@ -MMD -MP
 
 $(TARGET) : $(OBJS) $(USER_LIB)
 	$(CXX) $^ $(LIB_PATH) $(LIB) $(USER_LIB) -o $@
