[CODE]第三方依赖改为静态库

--- a/Makefile.config
+++ b/Makefile.config
@@ -2,13 +2,19 @@ BASE_INCLUDE = -I/usr/local/include -I/usr/local/integration_server_third/includ
 
 ZDB_INCLUDE = -I/usr/local/integration_server_third/include/zdb
 
-BASE_LIB_PATH = -L/usr/lib/x86_64-linux-gnu -L/usr/local/integration_server_third/lib
+BASE_LIB_PATH = -L/usr/lib/x86_64-linux-gnu -L/usr/local/integration_server_third/lib -L/usr/lib64/mysql
 
 ASAN_LIB = -lasan
 
 BASE_LIB = -lpthread
 
-CXX = g++
+PROTO_LIB = /usr/local/integration_server_third/lib/libprotobuf.a
+
+BOOST_LIB = /usr/local/integration_server_third/lib/libboost_system.a
+
+ZDB_LIB = /usr/local/integration_server_third/lib/libzdb.a
+
+CXX = ccache g++
 
 VERSION = -O0
 
