--- a/Makefile.config
+++ b/Makefile.config
@@ -16,12 +16,12 @@ ZDB_LIB = /usr/local/integration_server_third/lib/libzdb.a
 
 CXX = ccache g++
 
-VERSION = -O0
+VERSION = -O3
 
 #内存检测开启
 ASAN = -fsanitize=address
 
-CXXFLAGS = -Wall -std=c++11 -g -ggdb
+CXXFLAGS = -Wall -std=c++11 -g
 
 CXXDEFINE += -DNETWORK_TASK_TEST \
 		     -DNETWORK_SERVER
